--- a/Dockerfile_ubuntu.focal
+++ b/Dockerfile_ubuntu.focal
@@ -8,7 +8,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
     apt-get install --no-install-recommends -q -y \
     build-essential \
     ccache \
-    clang-format-7 \
+    clang-format \
     clang-tidy \
     clinfo \
     cmake \
@@ -20,27 +20,41 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
     libva-dev \
     ninja-build \
     ocl-icd-opencl-dev \
-    opencl-headers
+    opencl-headers \
+    software-properties-common \
+    ca-certificates \
+    gnupg \
+    vim \
+    wget \
+    vainfo \
+    hwinfo \ 
+    clinfo
 
-WORKDIR /build
-RUN mkdir -p build/src
-
-
-# Install level-zero and Intel level-zero GPU drivers from Agama 
+# Install level-zero and Intel level-zero GPU user-space and development packages
+# Reference: https://dgpu-docs.intel.com/driver/client/overview.html 
 #-----------------------
-RUN apt-get update -y && apt-get install -y --no-install-recommends software-properties-common ca-certificates gnupg wget && \
-    wget -qO - https://repositories.intel.com/graphics/intel-graphics.key | apt-key add - && \
-    add-apt-repository "deb [arch=amd64] https://repositories.intel.com/graphics/ubuntu focal main" && \
-    apt-get update && \
-    apt-get install -y intel-opencl-icd level-zero intel-level-zero-gpu level-zero-dev
+RUN wget -qO - https://repositories.intel.com/gpu/intel-graphics.key | \
+   gpg --dearmor --output /usr/share/keyrings/intel-graphics.gpg && \
+   echo "deb [arch=amd64,i386 signed-by=/usr/share/keyrings/intel-graphics.gpg] https://repositories.intel.com/gpu/ubuntu focal client" | \
+   tee /etc/apt/sources.list.d/intel-gpu-focal.list
+
+RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
+  apt-get install --no-install-recommends -q -y \
+  intel-opencl-icd intel-level-zero-gpu level-zero \
+  intel-media-va-driver-non-free libmfx1 libmfxgen1 libvpl2 \
+  libegl-mesa0 libegl1-mesa libegl1-mesa-dev libgbm1 libgl1-mesa-dev libgl1-mesa-dri \
+  libglapi-mesa libgles2-mesa-dev libglx-mesa0 libigdgmm12 libxatracker2 mesa-va-drivers \
+  mesa-vdpau-drivers mesa-vulkan-drivers va-driver-all \ 
+  libigc-dev intel-igc-cm libigdfcl-dev libigfxcmrt-dev level-zero-dev
 
 
 # Build level-zero-tests
+#-----------------------
+WORKDIR /build
 RUN git clone https://github.com/oneapi-src/level-zero-tests && \
     cd level-zero-tests && \
+    git checkout 895a198498270a31d4b273457a92e8fd91b28c74 && \
     git submodule update --init --recursive && \
-    mkdir build && \
-    cd build && \
-    cmake .. && \
-    cmake --build . --config Release --target install -j $(nproc)
+    cmake -S . -B build -D GROUP=/perf_tests && \
+    cmake --build build --config Release --target install -j $(nproc)
 
